RESOLVED FIXED316381
[JSC] Fix non-unified build due to incomplete use of class JSC::JSGlobalObject
https://bugs.webkit.org/show_bug.cgi?id=316381
Summary [JSC] Fix non-unified build due to incomplete use of class JSC::JSGlobalObject
Claudio Saavedra
Reported 2026-06-04 23:23:19 PDT
.
Attachments
Claudio Saavedra
Comment 1 2026-06-04 23:25:04 PDT
EWS
Comment 2 2026-06-05 05:52:57 PDT
Committed 314627@main (ee637a607df2): <https://commits.webkit.org/314627@main> Reviewed commits have been landed. Closing PR #66528 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-06-05 05:53:12 PDT
Note You need to log in before you can comment on or make changes to this bug.