[JSC] Fix non-unified build due to incomplete use of class JSC::JSGlobalObject https://bugs.webkit.org/show_bug.cgi?id=316381

Reviewed by Keith Miller.

TemporalZonedDateTime::withExactTime() needs the full definition of JSGlobalObject.
Instead of pulling another header into TemporalZonedDateTime.h move the definition
to the cpp file that already includes the required headers.

* Source/JavaScriptCore/runtime/TemporalZonedDateTime.cpp:
(JSC::TemporalZonedDateTime::withExactTime const):
* Source/JavaScriptCore/runtime/TemporalZonedDateTime.h:

Canonical link: https://commits.webkit.org/314627@main